Update màu sắc sản phẩm

--- a/admin/css/products.css
+++ b/admin/css/products.css
@@ -195,3 +195,14 @@ button[name="action"][value="delete"] { background-color: #dc3545; }
   background-color: #218838;
   transform: scale(1.05);
 }
+
+
+
+#add-color-form {
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    width: 300px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
