--- a/css/user.css
+++ b/css/user.css
@@ -525,7 +525,7 @@ footer {
   z-index: 1000;
 }
 #messenger-header {
-  background: #4CAF50;
+  background: #343a40;
   color: white;
   padding: 10px;
   font-weight: bold;
