--- a/css/user.css
+++ b/css/user.css
@@ -571,9 +571,9 @@ footer {
 }
 
 
-/* Tin nhắn bot */
-.bot-message {
-  background-color: #f1f0f0;
+/* Tin nhắn admin */
+.admin-message {
+  background-color: #bfb2b2;
   color: #000;
   padding: 8px 12px;
   margin: 5px;
@@ -664,7 +664,7 @@ footer {
 
 .banner img {
     width: 100%;
-    max-height: 400px;
+    max-height: 300px;
     object-fit: cover;
     border-radius: 8px;
 }
