--- a/css/user.css
+++ b/css/user.css
@@ -67,6 +67,36 @@ section {
     margin-bottom: 30px;
 }
 
+/* Dropdown menu cho tài khoản */
+.account-menu {
+  position: relative;
+}
+
+.account-dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: white;
+  border: 1px solid #ccc;
+  min-width: 150px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  z-index: 100;
+}
+
+.account-dropdown li a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #333;
+}
+
+.account-dropdown li a:hover {
+  background-color: #f0f0f0;
+}
+
 /*Product */
 /* Container sản phẩm */
 #products-container {
