--- a/admin/css/interface.css
+++ b/admin/css/interface.css
@@ -147,3 +147,17 @@
         .sidebar ul li a i {
             margin-right: 8px;
         }
+
+
+        
+        .new-alert {
+    display: inline-block;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+    margin-left: 5px;
+    font-size: 12px;
+    vertical-align: middle;
+}
