--- a/admin/css/contact.css
+++ b/admin/css/contact.css
@@ -64,7 +64,7 @@ body {
 
     /* Dòng liên hệ mới */
     .new-contact {
-        background-color: #d4edda; /* xanh nhạt nổi bật */
+        background-color: #d4edda; 
     }
 
     /* Dòng liên hệ cũ */
@@ -86,35 +86,3 @@ body {
     }
 
 
-/* Banner thông báo liên hệ mới */
-.new-contact-banner {
-    background-color: #1f1e1e;      
-    color: #e8bf46;                 
-    border: 1px solid #ffeeba;      
-    padding: 12px 20px;             
-    border-radius: 8px;            
-    font-weight: 600;               
-    display: flex;                  
-    align-items: center;          
-    gap: 10px;                    
-    margin-bottom: 20px;           
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    animation: slideDown 0.5s ease; 
-}
-
-/* Icon thông báo */
-.new-contact-banner i {
-    font-size: 18px;
-}
-
-/* Hiệu ứng xuất hiện */
-@keyframes slideDown {
-    0% {
-        transform: translateY(-20px);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
