--- a/user/css/register_login.css
+++ b/user/css/register_login.css
@@ -48,5 +48,49 @@ textarea {
 }
 
 
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #43a047;
+}
+
+
+
+.register-link {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.register-link a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+
+.register-link a:hover {
+    text-decoration: underline;
+}
+
+form p a {
+    display: block;
+    text-align: center;
+    margin-top: 8px;
+    color: #555;
+}
+
+
+
+input:focus {
+    border-color: #4CAF50;
+    outline: none;
+}
 
 
